[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pdtypes"
version = "0.1.0"
description = "Show data types for pandas data frames in terminal and notebooks"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/pwwang/pdtypes"
repository = "https://github.com/pwwang/pdtypes"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.black]
line-length = 80
target-version = ['py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=pdtypes --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
