[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdtypes"
version = "0.3.0"
description = "Show data types for pandas data frames in terminal and notebooks"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/pwwang/pdtypes"
repository = "https://github.com/pwwang/pdtypes"

[tool.poetry.dependencies]
python = "^3.8"
pandas = [
    { version = "2.0.*", python = "<3.9" },
    { version = ">=2.1,<3", python = ">=3.9,<3.11" },
    { version = ">=2.1", python = ">=3.11" },
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pyarrow = "*"  # pandas 2.2 warns about pyarrow not being installed
ipykernel = "*"
jinja2 = "*"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=pdtypes --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = "error"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
