[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdtypes"
version = "0.3.0"
description = "Show data types for pandas data frames in terminal and notebooks"
authors = [{ name = "pwwang", email = "pwwang@pwwang.com" }]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas==2.0.*; python_version < '3.9'",
    "pandas>=2.1,<3; python_version >= '3.9' and python_version < '3.11'",
    "pandas>=2.1; python_version >= '3.11'",
]

[project.urls]
Homepage = "https://github.com/pwwang/pdtypes"
Repository = "https://github.com/pwwang/pdtypes"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pyarrow",  # pandas 2.2 warns about pyarrow not being installed
    "ipykernel",
    "jinja2",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=pdtypes --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = "error"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
